# fswebcam

./: .gitignore  CHANGELOG  Makefile.in  README  config.h.in  configure  configure.ac  dec.h  dec_bayer.c  dec_grey.c  dec_jpeg.c  dec_png.c  dec_rgb.c  dec_s561.c  dec_yuv.c  effects.c  effects.h  example.conf  fswebcam.1  fswebcam.c  fswebcam.h  fswebcam_git.bb  log.c  log.h  parse.c  parse.h  snapcraft.yaml  src.c  src.h  src_file.c  src_raw.c  src_test.c  src_v4l1.c  src_v4l2.c  videodev2.h  videodev_mjpeg.h
